--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <div class="row">
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <a href="./daziyouxi" target="_blank">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/a.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
@@ -119,16 +120,19 @@
                 <i class="fa fa-search"></i> </div>
               <img src="img/a.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
+          </a>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <a href="./wuziqi" target="_blank">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/w.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="./wuziqi" target="_blank" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>五子棋</h4>
                 <div class="clearfix"></div>
                 <i class="fa fa-search"></i> </div>
               <img src="img/w.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
+          </a>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
