--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Chris James - UI/UX Designer & Front End Developer</title>
+<title>Zhangxiao</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -111,21 +111,19 @@
     <div class="row">
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <a href="./daziyouxi" target="_blank">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/a.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>打字游戏</h4>
                 <div class="clearfix"></div>
-                <i class="fa fa-search"></i> </div>
+                <a class="fa fa-search"></a> </div>
               <img src="img/a.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
-          </a>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
-          <a href="./wuziqi" target="_blank">
+          <a href="/wuziqi" target="_blank">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="./wuziqi" target="_blank" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/w.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>五子棋</h4>
                 <div class="clearfix"></div>
