--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="hover-text">
                 <h4>打字游戏</h4>
                 <div class="clearfix"></div>
-                <a class="fa fa-search"></a> </div>
+                <a class="fa fa-search" herf="/quziqi" target="_blank"></a> </div>
               <img src="img/a.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
