--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="hover-text">
                 <h4>打字游戏</h4>
                 <div class="clearfix"></div>
-                <a class="fa fa-search" herf="/quziqi" target="_blank"></a> </div>
+                <a class="fa fa-search" herf="/daziyouxi" target="_blank"></a> </div>
               <img src="img/a.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
@@ -127,7 +127,7 @@
               <div class="hover-text">
                 <h4>五子棋</h4>
                 <div class="clearfix"></div>
-                <i class="fa fa-search"></i> </div>
+                <a class="fa fa-search" herf="/wuziqi" target="_blank"></a> </div>
               <img src="img/w.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
           </a>
@@ -138,7 +138,7 @@
               <div class="hover-text">
                 <h4>贪吃蛇</h4>
                 <div class="clearfix"></div>
-                <i class="fa fa-search"></i> </div>
+                <a class="fa fa-search" herf="/tanchishe" target="_blank"></a> </div>
               <img src="img/c.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
