--- a/index.html
+++ b/index.html
@@ -111,14 +111,16 @@
     <div class="row">
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
+          <a href="/daziyouxi" target="_blank">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/a.jpg" title="Project description" rel="prettyPhoto">
               <div class="hover-text">
                 <h4>打字游戏</h4>
                 <div class="clearfix"></div>
-                <a class="fa fa-search" herf="/daziyouxi" target="_blank"></a> </div>
+                <i class="fa fa-search"></i> </div>
               <img src="img/a.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
+          </a>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <a href="/wuziqi" target="_blank">
@@ -127,7 +129,7 @@
               <div class="hover-text">
                 <h4>五子棋</h4>
                 <div class="clearfix"></div>
-                <a class="fa fa-search" herf="/wuziqi" target="_blank"></a> </div>
+                <i class="fa fa-search"></i> </div>
               <img src="img/w.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
           </a>
@@ -138,7 +140,7 @@
               <div class="hover-text">
                 <h4>贪吃蛇</h4>
                 <div class="clearfix"></div>
-                <a class="fa fa-search" herf="/tanchishe" target="_blank"></a> </div>
+                <i class="fa fa-search"></i> </div>
               <img src="img/c.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
